compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__record_update_incompatible_but_linked_generics.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2645
expression: "\npub type Wibble(a) {\n  Wibble(a: a, b: a)\n}\n\npub fn b_to_a(value: Wibble(a)) -> Wibble(Int) {\n  Wibble(..value, a: 5)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble(a) {
  Wibble(a: a, b: a)
}

pub fn b_to_a(value: Wibble(a)) -> Wibble(Int) {
  Wibble(..value, a: 5)
}


----- ERROR
error: Incomplete record update
  ┌─ /src/one/two.gleam:7:12
  │
7 │   Wibble(..value, a: 5)
  │            ^^^^^ This is a `Wibble(a)`

The `b` field of this value is a `a`, but the arguments given to the record
update indicate that it should be a `Int`.

Note: If the same type variable is used for multiple fields, all those
fields need to be updated at the same time if their type changes.
