compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__same_imports_multiple_times.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1826
expression: "\n        import gleam/wibble.{wobble}\n        import gleam/wibble.{zoo}\n        pub fn go() { wobble() + zoo() }\n        "
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/wibble.gleam

            pub fn wobble() { 1 }
            pub fn zoo() { 1 }
            

-- main.gleam

        import gleam/wibble.{wobble}
        import gleam/wibble.{zoo}
        pub fn go() { wobble() + zoo() }
        

----- ERROR
error: Duplicate import
  ┌─ /src/one/two.gleam:3:9
  │
2 │         import gleam/wibble.{wobble}
  │         ---------------------------- First imported here
3 │         import gleam/wibble.{zoo}
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Reimported here

`wibble` has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

error: Unknown variable
  ┌─ /src/one/two.gleam:4:34
  │
4 │         pub fn go() { wobble() + zoo() }
  │                                  ^^^

The name `zoo` is not in scope here.
